--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.5', '3.6', '3.7', '3.8']
+        python-version: ['3.6', '3.7', '3.8']
 
     steps:
     - uses: actions/checkout@v2
@@ -43,7 +43,6 @@ jobs:
 
     - name: Generate proto files
       run: |
-        rm ${{ env.PROTO_FOLDER }}/nanopb.proto
         protoc -I ${{ env.PROTO_FOLDER }} --python_out=./wirepas_networktool_messaging/proto ${{ env.PROTO_FOLDER }}/*.proto
     
     - name: Set up Python ${{ matrix.python-version }}
@@ -66,10 +65,6 @@ jobs:
 
     - name: Install wheel locally
       run: pip install .
-      
-    - name: Test with pytest
-      run: |
-        pytest tests/
 
     - name: Get short sha
       uses: benjlevesque/short-sha@v1.2
@@ -95,7 +90,7 @@ jobs:
 
     - name: Set the version
       run: |
-        sed -i '/__version__ = /c\__version__ = "${{ env.VERSION }}"' wirepas_mesh_messaging/__about__.py
+        sed -i '/__version__ = /c\__version__ = "${{ env.VERSION }}"' wirepas_networktool_messaging/__about__.py
 
     - name: Build the wheel
       run: python setup.py sdist bdist_wheel
@@ -119,7 +114,7 @@ jobs:
         upload_url: ${{ github.event.release.upload_url }}
         asset_path: ${{ env.WHEEL_FILE }}
         asset_content_type: application/zip
-        asset_name: wirepas_mesh_messaging-${{ env.VERSION }}-py3-none-any.whl
+        asset_name: wirepas_networktool_messaging-${{ env.VERSION }}-py3-none-any.whl
 
     - name: Publish package to TestPyPI for push to master
       if: ${{ github.event_name == 'workflow_dispatch' && matrix.python-version == '3.8' }}
